--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>
             <article>
                 <label for="">
-                    <p>Nom</p><input type="text" id="name">
+                    <p>Name</p><input type="text" id="name">
                 </label>
                 <label for="">
                     <p>Budget</p><input type="number" id="budget">
