--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
                             <!-- <ion-icon id="icon" name="train"></ion-icon> -->
                             <ion-icon id="icon" name="airplane"></ion-icon>
                             <select name="transport" id="transport">
-                                <option value="40000">Taxi-brousse</option>
-                                <option value="50000">Avion</option>
-                                <option value="30000">Voiture</option>
+                                <option value="40000" data-icon="bus">Taxi-brousse</option>
+                                <option value="50000" data-icon="bus">Avion</option>
+                                <option value="30000" data-icon="bus">Voiture</option>
                             </select>
                         </span>
 
@@ -170,12 +170,12 @@
                     </label>
                 </article>
                 <article>
-                    <button id="calculer">
+                    <figure id="calculer">
                         <span><ion-icon name="checkmark-circle-outline" id="icon-size"></ion-icon>
                             <img src="../calculateur/Images/roll.gif" alt="" id="img-size">
                         </span>
                         <span>Valider</span>
-                    </button>
+                    </figure>
                 </article>
             </form>
                 
